# nodo

./: CHANGELOG.md  LICENSE  README.md  nodo.py  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/nodo/: SKILL.md
.github/workflows/: nodo.yml
examples/: github-workflow.yml
examples/lessons/: README.md  nim.json  zig.json
nodo/: __init__.py  __main__.py  ask.py  assets.py  ast_index.py  cache.py  callgraph.py  config.py  crossfile.py  detectors.py  graphmerge.py  health.py  hookinstall.py  insights.py  knowledge.py  lessons.py  query.py  render.py  scanner.py  serve.py  surprises.py  symbols.py  symgraph.py  template.py  vibe.py
tests/: test_nodo.py
