[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nodo-map"
version = "0.1.0"
description = "Map any codebase: dependency graph + issue detection + AI-agent context. Zero dependencies, single self-contained HTML."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shiva Kumar Esakki Pandiyan", email = "shivae372@gmail.com" }]
keywords = ["codebase", "architecture", "dependency-graph", "visualization", "code-quality", "ai", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
# Zero runtime dependencies — pure standard library.
dependencies = []

[project.urls]
Homepage = "https://github.com/shivae372/nodo"
Issues = "https://github.com/shivae372/nodo/issues"

[project.scripts]
nodo = "nodo.__main__:main"

[tool.setuptools]
packages = ["nodo"]

[tool.setuptools.package-data]
nodo = ["vendor/*.js"]
