[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nodo-map"
version = "1.2.1"
description = "Map any codebase: dependency graph + issue detection + AI-agent context. Zero dependencies, single self-contained HTML."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Shiva Kumar Esakki Pandiyan", email = "shivae372@gmail.com" }]
keywords = ["codebase", "architecture", "dependency-graph", "visualization", "code-quality", "ai", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
# Zero runtime dependencies — pure standard library.
dependencies = []

# Optional accuracy/multimodal extras. The core never needs these; they only
# light up behind --ast / --multimodal and degrade gracefully when absent.
[project.optional-dependencies]
ast = ["tree-sitter>=0.21", "tree-sitter-language-pack>=0.1"]
multimodal = ["pypdf>=3.0"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/shivae372/nodo"
Issues = "https://github.com/shivae372/nodo/issues"

[project.scripts]
nodo = "nodo.__main__:main"

[tool.setuptools]
packages = ["nodo"]

[tool.setuptools.package-data]
nodo = ["vendor/*.js"]
